# rhoPy

./: .gitignore  README.md  README.txt  pyproject.toml  setup.py
.pytest_cache/v/cache/: lastfailed  nodeids
Tests/: tests.py
rhoPy/: rho.py
statcat/: __init__.py  statcat.py
statsLib/: statsLib.py
