[project]
name = "statslib"
version = "0.1.0"
description = "A (currently) small Python library of statistics functions which are aimed to be more efficient and expansive compared to the default library."
license = { file = "LICENSE" }
authors = [
    {name = "Caleb",email = "136144800+cracker76239@users.noreply.github.com"}
]

[project.urls]
readme = "README.md"
keywords = ["random", "math"]

[tool.poetry.dependencies]
requires-python = ">=3.13"

repositories = "https://github.com/cracker76239/statsLib"

[project.scripts]
my_package_cli = 'statsLib.console:run'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
