[tool.poetry]
name = "statsLib"
version = "0.1.0"
description = "A (currently) small Python library of statistics functions which are aimed to be more efficient and expansive compared to the default library."
license = "Apache-2.0"
keywords = ['random', 'math']
readme = "README.txt"
authors = [
    "Caleb 136144800+cracker76239@users.noreply.github.com"
]

[[tool.poetry.source]]
name = "statsLib"
url = "https://github.com/cracker76239/statsLib"

[tool.poetry.dependencies]
python = ">=3.13"

[tool.poetry.scripts]
my_package_cli = 'statsLib.console:run'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
